feat: update hero text and mentor profiles in index.html
Changed launch year in hero badge to 2026. Updated mentor profiles with new names, roles, and experience. Commented out hero stats, mentor stats, additional mentor cards, and testimonials section for a streamlined layout.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="hero-content">
             <div class="hero-badge">
                 <span class="pulse"></span>
-                🚀 Launching Tech Careers Since 2024
+                🚀 Launching Tech Careers Since 2026
             </div>
             <h1 class="hero-title">
                 Navigate Your
@@ -75,7 +75,7 @@
                     <span>Find a Mentor</span>
                 </a>
             </div>
-            <div class="hero-stats">
+            <!-- <div class="hero-stats">
                 <div class="stat">
                     <span class="stat-number" data-count="500">0</span>+
                     <span class="stat-label">Engineers Guided</span>
@@ -88,7 +88,7 @@
                     <span class="stat-number" data-count="95">0</span>%
                     <span class="stat-label">Success Rate</span>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="hero-visual">
             <div class="floating-card card-1">
@@ -290,23 +290,23 @@
                         <div class="mentor-badge">⭐ Top Mentor</div>
                     </div>
                     <div class="mentor-info">
-                        <h3>Arjun Sharma</h3>
-                        <p class="mentor-role">Senior Software Engineer @ Google</p>
-                        <p class="mentor-exp">8+ years experience</p>
+                        <h3>Varun Tayur</h3>
+                        <p class="mentor-role">Senior Software Engineer @ Microsoft</p>
+                        <p class="mentor-exp">17+ years experience</p>
                         <div class="mentor-tags">
                             <span>System Design</span>
                             <span>DSA</span>
                             <span>Backend</span>
                         </div>
                         <div class="mentor-stats">
-                            <div class="mentor-stat">
+                            <!-- <div class="mentor-stat">
                                 <span class="stat-val">50+</span>
                                 <span class="stat-lbl">Sessions</span>
-                            </div>
-                            <div class="mentor-stat">
+                            </div> -->
+                            <!-- <div class="mentor-stat">
                                 <span class="stat-val">4.9</span>
                                 <span class="stat-lbl">Rating</span>
-                            </div>
+                            </div> -->
                         </div>
                         <a href="#contact" class="btn btn-mentor">Book Session</a>
                     </div>
@@ -319,29 +319,27 @@
                         </div>
                     </div>
                     <div class="mentor-info">
-                        <h3>Priya Kapoor</h3>
-                        <p class="mentor-role">Tech Lead @ Microsoft</p>
-                        <p class="mentor-exp">10+ years experience</p>
+                        <h3>Sujay Ramachandra</h3>
+                        <p class="mentor-role">Director @ Blackduck</p>
+                        <p class="mentor-exp">17+ years experience</p>
                         <div class="mentor-tags">
-                            <span>Frontend</span>
-                            <span>React</span>
                             <span>Career Growth</span>
                         </div>
                         <div class="mentor-stats">
-                            <div class="mentor-stat">
+                            <!-- <div class="mentor-stat">
                                 <span class="stat-val">75+</span>
                                 <span class="stat-lbl">Sessions</span>
-                            </div>
-                            <div class="mentor-stat">
+                            </div> -->
+                            <!-- <div class="mentor-stat">
                                 <span class="stat-val">5.0</span>
                                 <span class="stat-lbl">Rating</span>
-                            </div>
+                            </div> -->
                         </div>
                         <a href="#contact" class="btn btn-mentor">Book Session</a>
                     </div>
                 </div>
 
-                <div class="mentor-card">
+                <!-- <div class="mentor-card">
                     <div class="mentor-image">
                         <div class="mentor-avatar" style="background: linear-gradient(135deg, #f43f5e, #fb7185);">
                             <span>RV</span>
@@ -368,9 +366,9 @@
                         </div>
                         <a href="#contact" class="btn btn-mentor">Book Session</a>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="mentor-card">
+                <!-- <div class="mentor-card">
                     <div class="mentor-image">
                         <div class="mentor-avatar" style="background: linear-gradient(135deg, #06b6d4, #22d3ee);">
                             <span>ND</span>
@@ -397,7 +395,7 @@
                         </div>
                         <a href="#contact" class="btn btn-mentor">Book Session</a>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <div class="services-offered">
@@ -429,7 +427,7 @@
     </section>
 
     <!-- Testimonials Section -->
-    <section id="testimonials" class="testimonials-section">
+    <!-- <section id="testimonials" class="testimonials-section">
         <div class="container">
             <div class="section-header">
                 <span class="section-tag">Success Stories</span>
@@ -480,7 +478,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- CTA Section -->
     <section class="cta-section">
