--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                 <span class="countdown-label">Secs</span>
                             </div>
                         </div>
-                        <a href="#" class="btn btn-primary btn-large">
+                        <a href="https://luma.com/event/evt-rfzFk6P4OAqFe87" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-large">
                             <span>Register for Free</span>
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M5 12h14M12 5l7 7-7 7"/>
