--- a/index.html
+++ b/index.html
@@ -409,7 +409,12 @@
                 <p>Have questions? Want to become a mentor? We'd love to hear from you.</p>
             </div>
             <div class="contact-content">
-                <form class="contact-form" id="contactForm">
+                <form class="contact-form" id="contactForm" action="https://formsubmit.co/mtv@outlook.com" method="POST">
+                    <input type="hidden" name="_subject" value="New SkillCompass Contact!">
+                    <input type="hidden" name="_template" value="table">
+                    <input type="hidden" name="_next" value="https://skillcompass0.github.io/#contact">
+                    <input type="hidden" name="_captcha" value="true">
+                    <input type="hidden" name="_autoresponse" value="Thank you for reaching out to SkillCompass! We've received your message and will get back to you within 24-48 hours. In the meantime, feel free to join our free Q&A sessions or explore our mentors. - The SkillCompass Team">
                     <div class="form-group">
                         <label for="name">Your Name</label>
                         <input type="text" id="name" name="name" placeholder="John Doe" required>
