--- a/index.html
+++ b/index.html
@@ -409,12 +409,10 @@
                 <p>Have questions? Want to become a mentor? We'd love to hear from you.</p>
             </div>
             <div class="contact-content">
-                <form class="contact-form" id="contactForm" action="https://formsubmit.co/mtv@outlook.com" method="POST">
-                    <input type="hidden" name="_subject" value="New SkillCompass Contact!">
-                    <input type="hidden" name="_template" value="table">
-                    <input type="hidden" name="_next" value="https://skillcompass0.github.io/#contact">
-                    <input type="hidden" name="_captcha" value="true">
-                    <input type="hidden" name="_autoresponse" value="Thank you for reaching out to SkillCompass! We've received your message and will get back to you within 24-48 hours. In the meantime, feel free to join our free Q&A sessions or explore our mentors. - The SkillCompass Team">
+                <form class="contact-form" id="contactForm" action="https://api.web3forms.com/submit" method="POST">
+                    <input type="hidden" name="access_key" value="6ad73a57-3bf6-45d6-8ec5-39786fd6e449">
+                    <input type="hidden" name="subject" value="New SkillCompass Contact!">
+                    <input type="hidden" name="from_name" value="SkillCompass Website">
                     <div class="form-group">
                         <label for="name">Your Name</label>
                         <input type="text" id="name" name="name" placeholder="John Doe" required>
