--- a/index.html
+++ b/index.html
@@ -415,11 +415,11 @@
                     <input type="hidden" name="from_name" value="SkillCompass Website">
                     <div class="form-group">
                         <label for="name">Your Name</label>
-                        <input type="text" id="name" name="name" placeholder="John Doe" required>
+                        <input type="text" id="name" name="name" placeholder="First Name" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email Address</label>
-                        <input type="email" id="email" name="email" placeholder="john@example.com" required>
+                        <input type="email" id="email" name="email" placeholder="FirstName@gmail.com" required>
                     </div>
                     <div class="form-group">
                         <label for="interest">I'm interested in</label>
@@ -476,10 +476,10 @@
                     </div>
                     <div class="footer-column">
                         <h4>Resources</h4>
-                        <a href="#">Blog</a>
-                        <a href="#">Career Guides</a>
-                        <a href="#">Interview Prep</a>
-                        <a href="#">FAQ</a>
+                        <a href="blog.html">Blog</a>
+                        <a href="career-guides.html">Career Guides</a>
+                        <a href="interview-prep.html">Interview Prep</a>
+                        <a href="faq.html">FAQ</a>
                     </div>
                     <div class="footer-column">
                         <h4>Legal</h4>
