--- a/index.html
+++ b/index.html
@@ -22,8 +22,27 @@
         <div class="nav-container">
             <a href="#top" class="logo">
                 <svg class="logo-icon" viewBox="0 0 40 40" fill="none">
-                    <circle cx="20" cy="20" r="18" stroke="url(#logoGradient)" stroke-width="3"/>
-                    <path d="M20 8L20 32M12 20L28 20" stroke="url(#logoGradient)" stroke-width="3" stroke-linecap="round"/>
+                    <!-- Outer ring -->
+                    <circle cx="20" cy="20" r="18" stroke="url(#logoGradient)" stroke-width="2"/>
+                    <!-- Inner ring -->
+                    <circle cx="20" cy="20" r="14" stroke="url(#logoGradient)" stroke-width="1" opacity="0.6"/>
+                    <!-- Cardinal direction markers -->
+                    <circle cx="20" cy="4" r="1.5" fill="url(#logoGradient)"/>
+                    <circle cx="20" cy="36" r="1.2" fill="url(#logoGradient)" opacity="0.6"/>
+                    <circle cx="4" cy="20" r="1.2" fill="url(#logoGradient)" opacity="0.6"/>
+                    <circle cx="36" cy="20" r="1.2" fill="url(#logoGradient)" opacity="0.6"/>
+                    <!-- Compass needle - North (pointing up, gradient fill) -->
+                    <polygon points="20,7 23,20 20,18 17,20" fill="url(#logoGradient)"/>
+                    <!-- Compass needle - South (pointing down, muted) -->
+                    <polygon points="20,33 23,20 20,22 17,20" fill="#a1a1aa" opacity="0.5"/>
+                    <!-- Center pivot -->
+                    <circle cx="20" cy="20" r="2.5" fill="url(#logoGradient)"/>
+                    <circle cx="20" cy="20" r="1.2" fill="#0f0f1a"/>
+                    <!-- Tick marks -->
+                    <line x1="20" y1="2" x2="20" y2="5" stroke="url(#logoGradient)" stroke-width="1.5" stroke-linecap="round"/>
+                    <line x1="38" y1="20" x2="35" y2="20" stroke="url(#logoGradient)" stroke-width="1" stroke-linecap="round" opacity="0.7"/>
+                    <line x1="20" y1="38" x2="20" y2="35" stroke="url(#logoGradient)" stroke-width="1" stroke-linecap="round" opacity="0.7"/>
+                    <line x1="2" y1="20" x2="5" y2="20" stroke="url(#logoGradient)" stroke-width="1" stroke-linecap="round" opacity="0.7"/>
                     <defs>
                         <linearGradient id="logoGradient" x1="0" y1="0" x2="40" y2="40">
                             <stop offset="0%" stop-color="#6366f1"/>
@@ -453,8 +472,27 @@
                 <div class="footer-brand">
                     <a href="#" class="logo">
                         <svg class="logo-icon" viewBox="0 0 40 40" fill="none">
-                            <circle cx="20" cy="20" r="18" stroke="url(#logoGradient2)" stroke-width="3"/>
-                            <path d="M20 8L20 32M12 20L28 20" stroke="url(#logoGradient2)" stroke-width="3" stroke-linecap="round"/>
+                            <!-- Outer ring -->
+                            <circle cx="20" cy="20" r="18" stroke="url(#logoGradient2)" stroke-width="2"/>
+                            <!-- Inner ring -->
+                            <circle cx="20" cy="20" r="14" stroke="url(#logoGradient2)" stroke-width="1" opacity="0.6"/>
+                            <!-- Cardinal direction markers -->
+                            <circle cx="20" cy="4" r="1.5" fill="url(#logoGradient2)"/>
+                            <circle cx="20" cy="36" r="1.2" fill="url(#logoGradient2)" opacity="0.6"/>
+                            <circle cx="4" cy="20" r="1.2" fill="url(#logoGradient2)" opacity="0.6"/>
+                            <circle cx="36" cy="20" r="1.2" fill="url(#logoGradient2)" opacity="0.6"/>
+                            <!-- Compass needle - North (pointing up, gradient fill) -->
+                            <polygon points="20,7 23,20 20,18 17,20" fill="url(#logoGradient2)"/>
+                            <!-- Compass needle - South (pointing down, muted) -->
+                            <polygon points="20,33 23,20 20,22 17,20" fill="#a1a1aa" opacity="0.5"/>
+                            <!-- Center pivot -->
+                            <circle cx="20" cy="20" r="2.5" fill="url(#logoGradient2)"/>
+                            <circle cx="20" cy="20" r="1.2" fill="#0f0f1a"/>
+                            <!-- Tick marks -->
+                            <line x1="20" y1="2" x2="20" y2="5" stroke="url(#logoGradient2)" stroke-width="1.5" stroke-linecap="round"/>
+                            <line x1="38" y1="20" x2="35" y2="20" stroke="url(#logoGradient2)" stroke-width="1" stroke-linecap="round" opacity="0.7"/>
+                            <line x1="20" y1="38" x2="20" y2="35" stroke="url(#logoGradient2)" stroke-width="1" stroke-linecap="round" opacity="0.7"/>
+                            <line x1="2" y1="20" x2="5" y2="20" stroke="url(#logoGradient2)" stroke-width="1" stroke-linecap="round" opacity="0.7"/>
                             <defs>
                                 <linearGradient id="logoGradient2" x1="0" y1="0" x2="40" y2="40">
                                     <stop offset="0%" stop-color="#6366f1"/>
