fix: Update mentor details in index.html
Changed company name for Senior Software Engineer to 'Fortune 500 Tech Company' and updated experience years from 17+ to 18+ for both mentors.

--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
                                 <span>SE</span>
                             </div>
                             <h3>Senior Software Engineer</h3>
-                            <p class="mentor-company">Microsoft</p>
-                            <p class="mentor-exp">17+ years experience</p>
+                            <p class="mentor-company">Fortune 500 Tech Company</p>
+                            <p class="mentor-exp">18+ years experience</p>
                             <div class="mentor-tags">
                                 <span>System Design</span>
                                 <span>DSA</span>
@@ -327,7 +327,7 @@
                             </div>
                             <h3>Engineering Director</h3>
                             <p class="mentor-company">Fortune 500 Tech Company</p>
-                            <p class="mentor-exp">17+ years experience</p>
+                            <p class="mentor-exp">18+ years experience</p>
                             <div class="mentor-tags">
                                 <span>Career Growth</span>
                                 <span>Leadership</span>
